# codility

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  codility.code-workspace
