cmake_minimum_required(VERSION 3.5)

project(codility LANGUAGES C)

add_subdirectory(01_01_binary_gap)
add_subdirectory(02_01_cyclic_rotation)
add_subdirectory(02_02_-odd_occurrences_in_array)
add_subdirectory(03_01_Frog_jump)
add_subdirectory(03_02_Perm_missing_elem)
add_subdirectory(03_03_Tape_Equilibrium)
add_subdirectory(04_03_Max_Counters)
